Change-Id: I2b205bf192e3692bf23941ea9aa3a61b3a75953e

--- a/fdup/fdup/grails-app/i18n/messages_de.properties
+++ b/fdup/fdup/grails-app/i18n/messages_de.properties
@@ -63,6 +63,7 @@ questionnaire.user.label=Teilnehmer
 questionnaire.questions.label=Fragen
 questionnaire.examinee.label=Prüfling
 questionnaire.test.save.nextquestion=Speichern und nächste Frage
+questionnaire.test.save.finishquestion=Speichern und beenden
 
 answer.label=Antwort
 
